--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
 .navbar a{
 	text-decoration: none;
 	padding-left: 5px;
-	padding-right: 5px;
+	
 	color: black;
 }
 .navbar h1{
@@ -60,7 +60,7 @@
   text-decoration: none;
 /*  background-color: #007bff;*/
 /*  color: white;*/
-  padding: 10px 20px;
+  padding-left:5px;
   border-radius: 5px;
 /*  display: inline-block;*/
 }
@@ -179,6 +179,7 @@
 	margin-left: auto;
 	margin-right: auto;
 }
+
 
 
 
