--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-.body{
+body{
 	background-image: url("https://th.bing.com/th/id/R.57a3c348db90768f8ced5bab237cf219?rik=UQdyiVyIjeSxaQ&riu=http%3a%2f%2f24.media.tumblr.com%2ftumblr_me428bxrBb1r4zr2vo1_r3_500.gif&ehk=Ad7%2fv2MwhUKrlle5TfMjkoTHWk7P435SfAFCJh39t6g%3d&risl=&pid=ImgRaw&r=0");
 	background-repeat: no-repeat;
 	background-size: cover;
+	flex-wrap: wrap;
 }
 
-
+.body{
+	flex-wrap: wrap;
+}
 
 
 .formcontact{
@@ -43,18 +46,25 @@
 .infocontact{
 /*	padding-left: ;*/
 }
+
 .navbar{
 	background-color: #2f3a55;
 	color: white;
 	padding-top:10px ;
 	padding-bottom:10px;
 	text-align: right;
-	width: 100%;
+	flex-wrap: wrap;
 }
+@media (max-width: 768px){
+  .navbar div{
+    flex: 1 1 100%;
+  }
+}
+
 .navbar a{
 	text-decoration: none;
-	padding-left: 5px;
-/*	padding-right: 5px;*/
+	padding-left: 2px;
+	padding-right: 0px;
 	color: white;
 }
 .navbar h1{
@@ -101,6 +111,12 @@
 .show {
   display: block;
 }
+@media (max-width: 768px){
+  .container div{
+    flex: 1 1 100%;
+  }
+}
+
 
 /*java*/
 .container{
@@ -110,9 +126,12 @@
 }
 .container div{
 	background-color: #2f3a55;
-/*	width: 20%;*/
-	padding-left: 20px;
-	padding-right: 20px;
+
+	padding-left: 0px;
+	padding-right: 0px;
+
+	flex-wrap: wrap;
+	padding-right: 0px;
 	text-align: center;
 	padding-bottom: 10px;
 	box-shadow: 0 2px 6px rgba(0,0,0,0.08); 
@@ -162,6 +181,11 @@
 	color: white;
 }
 
+@media (max-width: 768px){
+  .container div2{
+    flex: 1 1 100%;
+  }
+}
 
 }
 .last a{
