--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@
 	padding-top:10px ;
 	padding-bottom:10px;
 	font-family: 'Poppins', sans-serif;
+	flex-wrap: wrap ;
+	width:100%;
 
 }
 
@@ -286,5 +288,6 @@
 .buynow h2{
 	color: white;
 }
+
 
 
