--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
 	flex-wrap: wrap;
 }
 
-/* .body{
+.body{
 	flex-wrap: wrap;
-} */
+}
 
 
 .formcontact{
@@ -288,6 +288,7 @@
 .buynow h2{
 	color: white;
 }
+
 
 
 
