--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
-body{
+.body{
 	background-image: url("https://th.bing.com/th/id/R.57a3c348db90768f8ced5bab237cf219?rik=UQdyiVyIjeSxaQ&riu=http%3a%2f%2f24.media.tumblr.com%2ftumblr_me428bxrBb1r4zr2vo1_r3_500.gif&ehk=Ad7%2fv2MwhUKrlle5TfMjkoTHWk7P435SfAFCJh39t6g%3d&risl=&pid=ImgRaw&r=0");
 	background-repeat: no-repeat;
 	background-size: cover;
 	flex-wrap: wrap;
 }
-
+/*
 .body{
 	flex-wrap: wrap;
 }
-
+*/
 
 .formcontact{
 /*	width: 60%;*/
@@ -19,14 +19,14 @@ body{
 .formcontact input{
 	border-radius: 10px;
 	height: 40px;
-	width: 160px;
+	width: 300px;
 /*	border-style: none;*/
 	background-color: ghostwhite;
 }
 .formcontact textarea{
 	border-radius: 10px;
 	height: 80px;
-	width: 330px;
+	width: 300px;
 /*	border-style: none;*/
 	background-color: whitesmoke;
 }
@@ -52,15 +52,25 @@ body{
 	padding-top:10px ;
 	padding-bottom:10px;
 	font-family: 'Poppins', sans-serif;
-	flex-wrap: wrap ;
-	width:100%;
 
 }
 
 .navbar2 a{
 	text-decoration: none;
 	color: white;
-	padding-left: 10px;
+	border-style: solid;
+	margin-bottom: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	border-color: white;
+	border-radius: 10px;
+	background-color: #0a3d62;
+	 display: inline-block;   /* or block */
+  max-width: 100%;
+  box-sizing: border-box;
+  word-wrap: break-word;
 
 }
 .navbar{
@@ -90,12 +100,14 @@ body{
 .dropdown {
   position: relative;
   display: inline-block;
+  color: white;
 }
 
 .dropbtn {
   text-decoration: none;
 /*  background-color: #007bff;*/
-/*  color: white;*/
+  color: white;
+  background-color: #0a3d62;
   padding-left: 5px;
   border-radius: 5px;
 /*  display: inline-block;*/
@@ -106,6 +118,7 @@ body{
   position: absolute;
   background-color: white;
   min-width: 150px;
+  color: white;
   box-shadow: 0 4px 10px rgba(0,0,0,0.2);
   border-radius: 5px;
   z-index: 1;
@@ -116,11 +129,13 @@ body{
   padding: 10px;
   text-decoration: none;
   display: block;
+  color: white;
   text-align: left;
 }
 
 .dropdown-content a:hover {
   background-color: #f1f1f1;
+  color: black;
 }
 
 /* Show when active */
@@ -288,9 +303,4 @@ body{
 .buynow h2{
 	color: white;
 }
-
-
-
-
-
 
