--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: white;
+  background-color: #2f3a55;
   min-width: 150px;
   color: white;
   box-shadow: 0 4px 10px rgba(0,0,0,0.2);
