--- a/style.css
+++ b/style.css
@@ -50,29 +50,26 @@ body{
 	padding-top:10px ;
 	padding-bottom:10px;
 	font-family: 'Poppins', sans-serif;
-	display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
+
 }
 
 .navbar2 a{
-  text-decoration: none;
-  color: white;
-  border: 1px solid white;
-  margin-bottom: 20px;
-  padding: 10px 20px;
-  border-radius: 10px;
-  background-color: #0a3d62;
-  width: 100%;              /* full width */
+	text-decoration: none;
+	color: white;
+	border-style: solid;
+	margin-bottom: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	border-color: white;
+	border-radius: 10px;
+	background-color: #0a3d62;
+	 display: inline-block;   /* or block */
+  max-width: 100%;
   box-sizing: border-box;
   word-wrap: break-word;
-}
 
-/* mobile */
-@media (max-width: 768px){
-  .navbar2 a{
-    width: calc(50% - 10px); /* 2 per row */
-  }
 }
 .navbar{
 	background-color: #2f3a55;
